--- a/Food Finder/Base.lproj/Main.storyboard
+++ b/Food Finder/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="z7V-0x-fT1">
-    <device id="retina5_9" orientation="portrait">
+    <device id="ipad12_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,17 +15,17 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="RandomSelectionViewController" customModule="Food_Finder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location (Current Location is Default)" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="qK9-f7-SZM">
-                                <rect key="frame" x="16" y="69" width="280" height="30"/>
+                                <rect key="frame" x="16" y="45" width="929" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hZ5-qq-M0R">
-                                <rect key="frame" x="310" y="69" width="53" height="30"/>
+                                <rect key="frame" x="959" y="45" width="53" height="30"/>
                                 <color key="tintColor" red="0.0" green="0.56904578210000001" blue="0.57461684940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Search!">
                                     <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -34,21 +34,17 @@
                                     <action selector="searchButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DEs-yz-dri"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="354" translatesAutoresizingMaskIntoConstraints="NO" id="09x-UA-lXN">
-                                <rect key="frame" x="16" y="107" width="347" height="354"/>
-                                <viewLayoutGuide key="safeArea" id="rwb-28-jqm"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Four Barrel Coffee" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6sg-8I-k3w">
-                                <rect key="frame" x="0.0" y="457" width="375" height="54"/>
+                                <rect key="frame" x="0.0" y="1043" width="1024" height="54"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="54" id="ccF-8l-srm"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ty0-Cv-aeJ">
-                                <rect key="frame" x="35" y="659" width="122" height="57"/>
+                                <rect key="frame" x="35" y="1247" width="122" height="57"/>
                                 <color key="backgroundColor" red="1" green="0.22949634569999999" blue="0.032463684030000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="57" id="JYP-0h-6UJ"/>
@@ -56,11 +52,11 @@
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Try Another One"/>
                                 <connections>
-                                    <action selector="tryAgainButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EGm-Ml-A4c"/>
+                                    <action selector="searchButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Do-wg-7Hq"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gry-IR-r2G">
-                                <rect key="frame" x="213" y="659" width="122" height="57"/>
+                                <rect key="frame" x="862" y="1247" width="122" height="57"/>
                                 <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="57" id="DvG-XD-gnV"/>
@@ -72,19 +68,18 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="large_0" translatesAutoresizingMaskIntoConstraints="NO" id="TFj-3j-GkZ">
-                                <rect key="frame" x="16" y="619" width="160" height="24"/>
+                                <rect key="frame" x="16" y="1207" width="809" height="24"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="375 Valencia St" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRK-E4-ILX">
-                                <rect key="frame" x="12" y="524" width="343" height="34"/>
+                                <rect key="frame" x="12" y="1110" width="992" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="bJg-BF-2ii">
-                                <rect key="frame" x="16" y="566" width="205" height="40"/>
+                                <rect key="frame" x="675" y="1154" width="242" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <inset key="titleEdgeInsets" minX="50" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" title="number">
+                                <state key="normal" title="Press here to call">
                                     <color key="titleColor" red="0.0" green="0.56904578210000001" blue="0.57461684940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
@@ -92,44 +87,48 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Telephone" translatesAutoresizingMaskIntoConstraints="NO" id="VHp-ra-8ED">
-                                <rect key="frame" x="12" y="566" width="55" height="43"/>
+                                <rect key="frame" x="12" y="1154" width="659" height="43"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="43" id="IQZ-tt-xc3"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ggs-SX-jCD" customClass="GMSMapView">
+                                <rect key="frame" x="16" y="83" width="992" height="952"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gry-IR-r2G" secondAttribute="trailing" constant="40" id="1SB-S8-fTs"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ty0-Cv-aeJ" secondAttribute="bottom" constant="13" id="1bE-FX-WaR"/>
                             <constraint firstItem="gry-IR-r2G" firstAttribute="top" secondItem="TFj-3j-GkZ" secondAttribute="bottom" constant="16" id="6Ko-hb-zcQ"/>
-                            <constraint firstItem="bJg-BF-2ii" firstAttribute="top" secondItem="kRK-E4-ILX" secondAttribute="bottom" constant="8" id="Ac4-cc-FEE"/>
+                            <constraint firstItem="bJg-BF-2ii" firstAttribute="top" secondItem="kRK-E4-ILX" secondAttribute="bottom" constant="10" id="Ac4-cc-FEE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ggs-SX-jCD" secondAttribute="trailing" constant="16" id="B9d-h4-rYz"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Ty0-Cv-aeJ" secondAttribute="trailing" constant="20" symbolic="YES" id="BsD-VC-Ukn"/>
                             <constraint firstItem="6sg-8I-k3w" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EUN-43-oiz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gry-IR-r2G" secondAttribute="bottom" constant="13" id="FU7-74-nd1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kRK-E4-ILX" secondAttribute="trailing" constant="20" id="GCe-sI-A0c"/>
                             <constraint firstItem="TFj-3j-GkZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="H1L-Yt-d8Q"/>
                             <constraint firstItem="TFj-3j-GkZ" firstAttribute="top" secondItem="bJg-BF-2ii" secondAttribute="bottom" constant="13" id="HGS-h0-vL0"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="09x-UA-lXN" secondAttribute="bottom" constant="268" id="IDQ-Fg-o8e"/>
                             <constraint firstItem="Ty0-Cv-aeJ" firstAttribute="top" secondItem="TFj-3j-GkZ" secondAttribute="bottom" constant="16" id="IRC-Am-dxF"/>
                             <constraint firstItem="qK9-f7-SZM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="IZe-te-NTG"/>
                             <constraint firstItem="kRK-E4-ILX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="12" id="JcA-VS-dyh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TFj-3j-GkZ" secondAttribute="trailing" constant="199" id="Lgw-eD-X9V"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bJg-BF-2ii" secondAttribute="trailing" constant="154" id="OwZ-RL-125"/>
-                            <constraint firstItem="09x-UA-lXN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="63" id="PU5-x9-REV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bJg-BF-2ii" secondAttribute="trailing" constant="107" id="OwZ-RL-125"/>
                             <constraint firstAttribute="trailing" secondItem="6sg-8I-k3w" secondAttribute="trailing" id="Pow-iK-8iW"/>
-                            <constraint firstItem="09x-UA-lXN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Qfd-gg-eOQ"/>
                             <constraint firstItem="qK9-f7-SZM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="25" id="WGB-nH-qgS"/>
+                            <constraint firstItem="bJg-BF-2ii" firstAttribute="leading" secondItem="VHp-ra-8ED" secondAttribute="trailing" constant="4" id="XfU-c4-Kf1"/>
                             <constraint firstItem="Ty0-Cv-aeJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="aKn-TK-Wyn"/>
                             <constraint firstItem="hZ5-qq-M0R" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="25" id="adE-vK-nuZ"/>
                             <constraint firstItem="gry-IR-r2G" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" symbolic="YES" id="bfp-JU-l02"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="09x-UA-lXN" secondAttribute="trailing" constant="12" id="hQO-m0-KKJ"/>
+                            <constraint firstItem="6sg-8I-k3w" firstAttribute="top" secondItem="Ggs-SX-jCD" secondAttribute="bottom" constant="8" id="cWQ-dv-Ppf"/>
                             <constraint firstItem="VHp-ra-8ED" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="12" id="iLU-KG-PHT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ggs-SX-jCD" secondAttribute="bottom" constant="282" id="krl-dZ-Qbl"/>
                             <constraint firstItem="gry-IR-r2G" firstAttribute="width" secondItem="Ty0-Cv-aeJ" secondAttribute="width" id="laH-K2-6EO"/>
+                            <constraint firstItem="VHp-ra-8ED" firstAttribute="top" secondItem="kRK-E4-ILX" secondAttribute="bottom" constant="10" id="lbf-gI-gHh"/>
                             <constraint firstItem="kRK-E4-ILX" firstAttribute="top" secondItem="6sg-8I-k3w" secondAttribute="bottom" constant="13" id="mNL-7a-Zih"/>
-                            <constraint firstItem="bJg-BF-2ii" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="o1A-y7-hdX"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VHp-ra-8ED" secondAttribute="trailing" constant="308" id="pda-BD-mSK"/>
-                            <constraint firstItem="VHp-ra-8ED" firstAttribute="top" secondItem="bJg-BF-2ii" secondAttribute="top" id="uwq-J6-FBW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VHp-ra-8ED" secondAttribute="trailing" constant="353" id="pda-BD-mSK"/>
+                            <constraint firstItem="Ggs-SX-jCD" firstAttribute="top" secondItem="qK9-f7-SZM" secondAttribute="bottom" constant="8" id="rrB-RP-eb7"/>
+                            <constraint firstItem="Ggs-SX-jCD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="tHn-Uf-JRU"/>
                             <constraint firstItem="hZ5-qq-M0R" firstAttribute="leading" secondItem="qK9-f7-SZM" secondAttribute="trailing" constant="14" id="wxA-te-yFr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hZ5-qq-M0R" secondAttribute="trailing" constant="12" id="xbZ-sF-Xqd"/>
                         </constraints>
@@ -141,14 +140,15 @@
                         <outlet property="locationTextField" destination="qK9-f7-SZM" id="WBg-tc-uHa"/>
                         <outlet property="nameLabel" destination="6sg-8I-k3w" id="OKx-1h-IaF"/>
                         <outlet property="phoneButton" destination="bJg-BF-2ii" id="fGt-Gr-fY7"/>
+                        <outlet property="phoneImage" destination="VHp-ra-8ED" id="lAa-pO-UcI"/>
                         <outlet property="ratingImage" destination="TFj-3j-GkZ" id="3NN-Si-JaP"/>
-                        <outlet property="restaurantImage" destination="09x-UA-lXN" id="u03-Oo-VMy"/>
                         <outlet property="searchButton" destination="hZ5-qq-M0R" id="Pbe-UT-70k"/>
+                        <outlet property="theMapView" destination="Ggs-SX-jCD" id="GmM-o8-ggV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1052" y="-308.86699507389164"/>
+            <point key="canvasLocation" x="1050.7246376811595" y="-308.96739130434787"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1Bc-QG-2cD">
@@ -156,6 +156,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="z7V-0x-fT1" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="C15-Rg-7qI">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -169,7 +170,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="354" width="458" height="354"/>
         <image name="Telephone" width="128" height="128"/>
         <image name="large_0" width="132" height="24"/>
     </resources>
